wikipedia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-server
  template:
    metadata:
      labels:
        app: wiki-server
    spec:
      volumes:
        - name: www
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: default.conf
                path: default.conf

      #########################################
      # INIT CONTAINER
      #########################################
      containers:

        #########################################
        # MAIN NGINX CONTAINER
        #########################################
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

---
apiVersion: v1
kind: Service
metadata:
  name: wiki-svc
spec:
  type: LoadBalancer
  selector:
    app: wiki-svc
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
